Corrected language mistake

--- a/src/view/language/Labels.properties
+++ b/src/view/language/Labels.properties
@@ -1,21 +1,21 @@
 name = french
-translated_name = Français
+translated_name = Fran\u00e7ais
 flag = french.png
 locale = fr
 
 lang = Langue
 
-language.french = Français
+language.french = Fran\u00e7ais
 language.english = Anglais
 language.spanish = Espagnol
 
-difficulty.label = Difficulté
+difficulty.label = Difficult\u00e9
 difficulty.easy = Facile
 difficulty.medium = Moyenne
 difficulty.hard = Difficile
-difficulty.very_hard = Très difficile
+difficulty.very_hard = Tr\u00e8s difficile
 
-theme = Thème
+theme = Th\u00e8me
 
 theme.light-blue = Clair: Bleu
 theme.light-green = Clair: Vert
@@ -29,7 +29,7 @@ theme.dark-orange = Sombre: Orange
 theme.dark-pink = Sombre: Rose
 
 new_game = Nouvelle Partie
-give_up = Abandoner
+give_up = Abandonner
 
 give_up_popup.title = Abandonner la partie
 give_up_popup.message = Souhaitez-vous voir la solution de cette grille ?
@@ -37,11 +37,11 @@ give_up_popup.yes = Oui
 give_up_popup.no = Non
 give_up_popup.cancel = Annuler
 
-win_popup.title = Vous avez gagné !
-win_popup.message = Bravo !\n Vous avez gagné la partie. Votre temps était de :\n
+win_popup.title = Vous avez gagn\u00e9 !
+win_popup.message = Bravo !\n Vous avez gagn\u00e9 la partie. Votre temps \u00e9tait de :\n
 
 complete_Wrong_popup.title = Il te reste des erreurs !
-complete_Wrong_popup.message = La grille est complète mais il reste des erreurs !
+complete_Wrong_popup.message = La grille est compl\u00e8te mais il reste des erreurs !
 
 errors = Erreurs
 
